--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <title>LTX | Dev</title>
 
-  <link rel="icon" href="favicon.ico" type="image/png" />
+  <link rel="icon" href="L.svg" type="image/png" />
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
   <!-- <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
