--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="google-adsense-account" content="ca-pub-1428770193317699">
+  <!-- <meta name="google-adsense-account" content="ca-pub-1428770193317699"> -->
 
   <title>LTX | Dev</title>
 
@@ -21,6 +21,8 @@
   <!-- <link rel="stylesheet" href="css/themes/white-grey.css"> -->
   <!-- <link rel="stylesheet" href="css/themes/white-red.css"> -->
   <!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1428770193317699"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
